@@ -1,3 +1,6 @@
+2007-11-26 Yusei
+* Add bookmark feature for km.
+
 2007-11-21 Yusei
 * Search predecessor only from document type documents.
 
